# userman

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh
app/: Cargo.toml
app/src/: apps.rs  config_yaml.rs  dao.rs  error.rs  logger.rs  main.rs  roles.rs  tokens.rs  users.rs
app/src/api/: apps.rs  mod.rs  roles.rs  sessions.rs
app/src/tests/: data.rs  roles.rs
back/: Cargo.toml  coverage.sh
back/app/: Cargo.toml
back/app/src/: apps.rs  config_yaml.rs  configs.rs  dao.rs  error.rs  files.rs  main.rs  roles.rs  tokens.rs  users.rs  watchers.rs  web.rs
back/app/src/api/: apps.rs  mod.rs  openapi.rs  roles.rs  sessions.rs  users.rs
back/app/src/api/v1/: apps.rs  mod.rs  roles.rs  sessions.rs  users.rs
back/app/src/tests/: data.rs  mod.rs  roles.rs
back/userman-auth/: Cargo.toml
front/: entities.d.ts  index.html  package.json  tsconfig.node.json
front/src/: global.ts  main.ts  vite-env.d.ts
front/src/components/: AppBar.vue  AppCard.vue  Avatar.vue  Footer.vue  LoginCard.vue  NavBar.vue  ResetCard.vue  RoleCard.vue  RoleRootA.vue  RoleRootB.vue  RoleValues.vue  RolesList.vue  UserCard.vue  UsersList.vue
front/src/plugins/: axios.ts  vuetify.ts
front/src/router/: index.ts
front/src/store/: app.ts  auth.ts
front/src/views/: Apps.vue  Default.vue  Login.vue  NotFound.vue  Reset.vue  Roles.vue  Users.vue
frontend/: tsconfig.json  vite.config.ts
frontend/src/: global.ts
frontend/src/components/: AppsList.vue  LoginCard.vue  RoleItemsA.vue  RoleItemsB.vue  UserCard.vue  UsersList.vue
frontend/src/plugins/: index.ts
(+4 files in other folders)
