[package]
name = "userman"
version = "0.1.0"
edition = "2021"

[dependencies]
userman-auth = { path = "../userman-auth" }
axum = { version = "0.6.2", features = ["headers"] }
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
futures = "0.3.25"
tokio = { version = "1.20", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"
serde_json = "1.0.91"
async-trait = "0.1.61"
thiserror = "1.0.32"
log = "0.4.17"
rust-embed="6.4.0"
mime_guess = "2.0.4"
image = "0.24.5"
haikunator = "0.1.2"
mongodb = { version = "2.3", features = ["bson-chrono-0_4"] }
log4rs = { version = "1.2.0", features = ["gzip"] }
reqwest = { version = "0.11.13", features = ["native-tls", "json"] }
bcrypt = "0.13.0"
jsonwebtoken = "8.2.0"
rand = "0.8.5"
chrono = "0.4.23"